--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
 
     <div class="container--flex">
-        <label for="" class="form__label">Matricula</label>
+        <label for="" class="form__label">Matricula Escolar</label>
      <input type="text" class="form__input" name="matricula" required>
  </div>
 
